@@ -1,17 +1,17 @@
-1a4567278ea9b124da9f2163f9559266 *ChangeLog
-9a6bb64d08a1c7a0d520c85bc6f358c9 *DESCRIPTION
-02861535b1440be589f9aebea376f81f *NAMESPACE
+988b3d36e768fd3d23b1d4819461ab28 *ChangeLog
+723c8f6f5aa05e994e388e303476a605 *DESCRIPTION
+2f83b93c6a65ef36ee82fce9d333de2f *NAMESPACE
 4a366b65083982339a14ac1347f1499f *R/abn-internal.R
-e96dbe92bcb06b9cbb9c03b2563050ff *R/build_score_cache.R
+efdc26ca58b7d48d86b0d200fd9f1083 *R/build_score_cache.R
 b48bdc6c72fe2ab565703394175404bf *R/calc_node_inla_glm.R
 f88fc90904fcad527c87f6e188584f3d *R/calc_node_inla_glmm.R
-23a6e740874883ac78e590ecf8dd2e5e *R/fitabn.R
+91958bf713c9dbb2dc970caa242fc6c5 *R/fitabn.R
 675c5e6882e3cad98ada118092137ba1 *R/getmarginals.R
 857bb86deb35a81a677b867193a5e564 *R/mostprobable.R
-36a0b93a0d8be26f237b45b55b1a6117 *R/search_hillclimber.R
-cc7a11c853e58fb7a2b6e1d767a794e5 *R/tographviz.R
-3969bc36b9dfb1888088c3f3fd914737 *build/vignette.rds
-849268739abb2f7f01c8b953fef6ba7e *cleanup
+c238166ede57fcae6bdc54ff1ee69fe7 *R/search_hillclimber.R
+1c79cc8716cda48038ef57a7d090f148 *R/tographviz.R
+ded068bcae5293026649d79a59f664f4 *build/vignette.rds
+67c9db5dc1a8e12ccf5880ffe206ce56 *cleanup
 c076edef17cf551dbb86dc6a88b40570 *configure
 ad6251766527d7a81c30b4073802616a *configure.ac
 82a22fbc5407a5eccdb51eeb23b664b8 *data/ex0data.RData
