@@ -1,3 +1,4 @@
+
 #! /bin/sh
 for f in ./config.*; do
 rm -f $f
